# schedsim

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  README.org  Untitled.ipynb  Untitled2.ipynb  analysis.xml  analyze_allocation_with _dyn_cap.ipynb  barectf-bitfield.h  barectf.c  barectf.h  benchmark_simulators.py  config.yaml  energy-consumption-vs-utilisation.py  engine.cpp  engine.hpp  event.cpp  event.hpp  flake.nix  lib.py  main.cpp  optimal-path.ipynb  optimal-path.py  package.nix  plateform.cpp  plot.sh  processor.hpp  readme.org  result  results.ipynb  results.py  run.sh  sce.json  sce_test.json  (+24 more)
apps/: CMakeLists.txt  alloc.cpp  alloc_new.cpp  analyzer.cpp  analyzer_new.cpp  generator.cpp  generator_new.cpp  optimal.cpp  simulator.cpp  simulator_new.cpp
doc/: CMakeLists.txt  diagramme-global.uml
doc/doxygen/: header.html
doc/source/: conf.py  index.rst  modules.rst  scenarios.rst
doc/source/api-cpp/: allocators.rst  api.rst  events.rst  scenarios.rst  simulator.rst
docs/: CMakeLists.txt  Doxyfile.in  architecture.md  background.excalidraw
docs/source/: api-python.rst  conf.py.in  index.rst
docs/source/api-cpp/: algo.rst  core.rst  generators.rst  hardware.rst  index.rst  io.rst  schedulers.rst  traces.rst
docs/source/api-python/: core.rst  index.rst  io.rst  metrics.rst  scheduling.rst  tracing.rst
docs/source/cli/: index.rst
docs/source/getting-started/: concepts.rst  index.rst
docs/source/json-formats/: index.rst
docs/source/tutorials/: analysis.rst  dvfs-energy.rst  first-simulation.rst  index.rst  multi-cluster.rst  python-batch.rst  python-quickstart.rst  python-visualization.rst  scenarios.rst
generator/: CMakeLists.txt
generator/src/: main.cpp  task_generator.cpp  task_generator.hpp
protocols/: CMakeLists.txt  logs.proto
protocols/include/protocols/: hardware.hpp  platform.hpp  scenario.hpp  traces.hpp
protocols/platform/: platform.cpp  platform.hpp
protocols/scenario/: scenario.cpp  scenario.hpp
protocols/src/: hardware.cpp  platform.cpp  scenario.cpp  traces.cpp
protocols/traces/: traces.cpp  traces.hpp
python/: CMakeLists.txt
python/src/: bindings.cpp  core_types.i  pyschedlib.cpp  pyschedlib.i  pyschedsim.i
python/tests/: pyschedlib_exceptions.py  pyschedlib_hardening.py  pyschedlib_json.py  pyschedlib_smoke.py  test_core.py  test_edge_cases.py  test_energy.py  test_exceptions.py  test_io.py  test_new_api.py  test_types.py
scenario/: CMakeLists.txt  scenario.cpp  scenario.hpp
schedgen/: CMakeLists.txt  README.md
schedgen/src/: main.cpp  task_generator.cpp  task_generator.hpp
schedlib/: CMakeLists.txt
schedlib/include/analyzers/: deadline_misses.hpp  energy.hpp  energy_model.hpp  frequency.hpp  stats.hpp  system_utilization.hpp  textual.hpp
schedlib/tests/: hardware.cpp  main_schedsim.cpp  traces.cpp
schedsim/: CMakeLists.txt
schedsim/algo/: CMakeLists.txt
schedsim/bench/: CMakeLists.txt  engine_bench.cpp
schedsim/core/: CMakeLists.txt
schedsim/include/: allocator.hpp  engine.hpp  entity.hpp  event.hpp  meta_scheduler.hpp  platform.hpp  processor.hpp  scheduler.hpp  server.hpp  task.hpp  timer.hpp
schedsim/io/: CMakeLists.txt
schedsim/src/: allocator.cpp  engine.cpp  engine.hpp  entity.hpp  event.hpp  main.cpp  meta_scheduler.cpp  plateform.hpp  platform.cpp  platform.hpp  processor.cpp  processor.hpp  sched_mono.hpp  sched_parallel.cpp  sched_parallel.hpp  sched_power_aware.cpp  sched_power_aware.hpp  scheduler.cpp  scheduler.hpp  server.cpp  server.hpp  task.cpp  task.hpp  timer.cpp
schedsim/tests/: main.cpp
schedview/: CMakeLists.txt  README.md
schedview/include/: core_utilization.hpp  energy.hpp  energy_model.hpp  stats.hpp  textual.hpp
schedview/src/: core_utilization.cpp  core_utilization.hpp  deadline_misses.cpp  deadline_misses.hpp  energy.cpp  energy.hpp  energy_model.cpp  energy_model.hpp  frequency.cpp  frequency.hpp  main.cpp  stats.cpp  stats.hpp  system_utilization.cpp  system_utilization.hpp  textual.cpp  textual.hpp
schedview/tests/: main.cpp
src/: CMakeLists.txt  barectf-bitfield.h  barectf-platform-simulator.c  barectf-platform-simulator.h  barectf.c  barectf.h  config.yaml  engine.cpp  engine.hpp  entity.hpp  event.cpp  event.hpp  job.hpp  main.cpp  plateform.cpp  plateform.hpp  processor.cpp  processor.hpp  sched_mono.cpp  sched_mono.hpp  sched_parallel.cpp  sched_parallel.hpp  scheduler.cpp  scheduler.hpp  server.cpp  server.hpp  task.cpp  task.hpp  tracer.cpp  tracer.hpp  tracer_json.cpp  tracer_json.hpp
tests/: CMakeLists.txt  generate-scenarios.sh  gold-test.sh  hardware.cpp  main.cpp  platform.cpp  scenario.cpp  test-breaking-change.sh  traces.cpp  verify_grub.py
tests/golden/: ci-input_csf_ff_big_first.json  ci-input_csf_ff_cap.json  ci-input_csf_ff_little_first.json  ci-input_ffa_ff_big_first.json  ci-input_ffa_ff_cap.json  ci-input_ffa_ff_little_first.json  ci-input_grub_ff_big_first.json  ci-input_grub_ff_cap.json  ci-input_grub_ff_little_first.json  ci-input_pa_ff_big_first.json  ci-input_pa_ff_cap.json  ci-input_pa_ff_little_first.json  ex0_csf_ff_cap.json  ex0_ffa_ff_lb.json  ex0_grub_ff_cap.json  ex0_pa_ff_big_first.json  manifest.sha256
tests/scenarios/: ci-input.json  ci-output.json  ex0.json  ex1.json  ex2.json  ex3.json  multi-ex1.json  multi-ex2.json  multi-ex3.json  multi-ex4.json  pa-1.json  simple.json  test.json
traces/: CMakeLists.txt  traces.cpp  traces.hpp
traces/trace0/: stream
traces/trace1/: stream
traces/trace2/: stream
traces/trace3/: stream
traces/trace4/: stream
viewer/: CMakeLists.txt  README.md  arrival.cpp  arrival.hpp  deadline.cpp  main.cpp  parse_trace.cpp  parse_trace.hpp  path.hpp  proc.cpp  rtsched.cpp  rtsched.hpp  timeslot.cpp  timeslot.hpp  trace.hpp
viewer/inputs/: CMakeLists.txt  json.hpp
viewer/outputs/: CMakeLists.txt  rtsched.cpp  rtsched.hpp  textual.cpp  textual.hpp
viewer/src/: energy.cpp  energy.hpp  json.cpp  json.hpp  main.cpp  rtsched.cpp  rtsched.hpp  stats.cpp  textual.cpp  textual.hpp  trace.hpp
(+370 files in other folders)
