function(add_app TARGET_NAME SOURCE_FILE)
    add_executable(${TARGET_NAME})
    target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
    target_sources(${TARGET_NAME} PRIVATE ${SOURCE_FILE})
    target_link_libraries(${TARGET_NAME} PRIVATE cxxopts schedsim-core schedsim-algo schedsim-io)
endfunction()

add_app(schedsim simulator.cpp)
add_app(schedgen generator.cpp)
add_app(schedview analyzer.cpp)
add_app(alloc alloc.cpp)
