add_library(scenario)
target_compile_features(scenario PUBLIC cxx_std_23)
target_compile_options(scenario PRIVATE -fdiagnostics-color=always -fsanitize=address)
target_link_options(scenario PRIVATE -fsanitize=address)
target_link_libraries(scenario PUBLIC json)
target_sources(scenario PUBLIC scenario/scenario.hpp PRIVATE scenario/scenario.cpp)
target_include_directories(scenario PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/scenario)

add_library(traces)
target_compile_features(traces PUBLIC cxx_std_23)
target_compile_options(traces PRIVATE -fdiagnostics-color=always -fsanitize=address)
target_link_options(traces PRIVATE -fsanitize=address)
target_link_libraries(traces PUBLIC json)
target_sources(traces PUBLIC traces/traces.hpp PRIVATE traces/traces.cpp)
target_include_directories(traces PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/traces)
